@@ -1,3 +1,14 @@
+2008-01-18  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	Patch by: Wouter Cloetens <wouter at mind dot be>
+
+	* ext/soup/gstsouphttpsrc.c: (gst_souphttp_src_class_init),
+	(gst_souphttp_src_init), (gst_souphttp_src_create),
+	(gst_souphttp_src_is_seekable), (gst_souphttp_src_do_seek),
+	(soup_add_range_header), (soup_got_headers), (soup_got_chunk):
+	* ext/soup/gstsouphttpsrc.h:
+	Add support for seeking to souphttpsrc. Fixes bug #502335.
+
 2008-01-17  Wim Taymans  <wim.taymans@collabora.co.uk>
 
 	* gst/h264parse/gsth264parse.c: (gst_h264_parse_clear_queues),
